--- a/2017.md
+++ b/2017.md
@@ -2,7 +2,7 @@
 layout: page
 ---
 
-### Code for Good 2017
+### Python for Good 2017
 
 [Join us on Slack](https://pythonforgood.herokuapp.com/) before, during, and after the event for announcements and making friends.
 
