--- a/2018.md
+++ b/2018.md
@@ -16,7 +16,6 @@ layout: page
 
 ###### Friday July 27th
 
-* 8:00 am - Breakfast
 * 9:00 am - Work on projects
 * 12:00 pm - Lunch
 * 1:00 pm - Work on projects
@@ -25,7 +24,6 @@ layout: page
 
 ###### Saturday July 28th
 
-* 8:00 am - Breakfast
 * 9:00 am - Work on projects
 * 12:00 pm - Lunch
 * 1:00 pm - Work on projects
@@ -34,21 +32,16 @@ layout: page
 
 ###### Sunday July 29th
 
-* 8:00 am - Breakfast
 * 9:00 am - Work on projects
 * 12:00 pm - Lunch
 * 1:00 pm - Demos (if your project isn't finished, demo what you can!)
 
 ### Location
 
-Reed College<br>
-3203 SE Woodstock Blvd<br>
-Portland, OR 97202
-
-Reed College is accessible by multiple bus lines. Check out <a href="http://trimet.org/">http://trimet.org/</a> for more information.
-
-After arriving, head to the “Residences” building to check in.
+PDX Code Guild<br>
+2828 SW Corbett Ave. #208<br>
+Portland, OR 97201
 
 ### What to Bring
 
-Bring yourself, your laptop, a power source, some clothes and your favorite board games. Maybe some sunscreen if the weather’s nice. If you anticipate skipping group meals, bring some munchies. If you’re a light sleeper, bring earplugs. All the basics are provided (linens, pillows, beds, towels, etc.).
+Bring yourself, your laptop, a power source, and your favorite board games. Maybe some sunscreen if the weather’s nice. If you anticipate skipping group meals, bring some munchies.
